--- a/packages/errors/package.json
+++ b/packages/errors/package.json
@@ -1,9 +1,13 @@
 {
   "name": "@based/errors",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "license": "MIT",
   "type": "module",
   "main": "./dist/src/index.js",
+  "exports": {
+    "./client": "./dist/src/client.js",
+    ".": "./dist/src/index.js"
+  },
   "scripts": {
     "build": "rm -rf ./dist && tsc",
     "watch": "npx tsc --watch",
@@ -23,7 +27,9 @@
     "README.md",
     "package.json"
   ],
-  "dependencies": {},
+  "dependencies": {
+    "@based/functions": "^3.0.1"
+  },
   "devDependencies": {
     "ts-node": "10.9.1",
     "ava": "5.3.1",
