--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "registry": "https://registry.npmjs.org"
   },
   "devDependencies": {
+    "http-proxy": "^1.18.1",
     "turbo": "1.6.3",
     "@saulx/prettier-config": "2.0.0",
     "@saulx/tsconfig": "^1.1.0",
