--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,12 +1,14 @@
 {
   "name": "@based/client",
-  "version": "6.3.1",
+  "version": "6.4.0",
   "license": "MIT",
   "scripts": {
     "build": "npx tsc && cp ./dist/src/index.d.ts ./dist/src/index_original.d.ts",
     "watch": "npx tsc --watch",
     "clean": "rimraf {.turbo,dist,node_modules}",
-    "test": "npx ava"
+    "test": "npx ava",
+    "browser": "npx vite ./test/browser",
+    "browser-server": "node ./test/browser/server.js"
   },
   "type": "module",
   "main": "./dist/src/index.js",
@@ -42,9 +44,8 @@
     "ws": "^8.13.0"
   },
   "devDependencies": {
+    "vite": "^5.2.8",
     "get-port": "7.0.0",
-    "@aws-sdk/lib-storage": "^3.304.0",
-    "@aws-sdk/client-s3": "^3.304.0",
     "@based/functions": "^3.0.2",
     "cross-fetch": "4.0.0",
     "ava": "5.3.1",
