--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   },
   "devDependencies": {
     "@saulx/tsconfig": "^1.1.0",
-    "@saulx/prettier-config": "^1.0.0",
+    "@saulx/prettier-config": "2.0.0",
     "rimraf": "^3.0.2",
     "turbo": "1.6.3",
     "typescript": "^5.1.6"
