--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,7 @@
 {
-  "$schema": "https://json.schemastore.org/tsconfig",
-  "display": "Based",
+  "extends": "@saulx/tsconfig/default.json",
   "compilerOptions": {
-    "jsx": "react",
-    "target": "es2021",
-    "module": "commonjs",
-    "moduleResolution": "node",
-    "sourceMap": true,
-    "removeComments": false,
-    "noImplicitAny": false,
-    "skipLibCheck": true,
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "declaration": true,
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "resolveJsonModule": true,
-    "declarationMap": true
-  }
+    "outDir": "dist"
+  },
+  "include": ["src", "test"]
 }
