--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "@saulx/tsconfig/default.json",
   "compilerOptions": {
+    "jsx": "react",
     "rootDir": "src",
     "outDir": "dist"
   },
