--- a/packages/solid/tsconfig.json
+++ b/packages/solid/tsconfig.json
@@ -2,9 +2,9 @@
   "extends": "@saulx/tsconfig/default.json",
   "compilerOptions": {
     "jsx": "preserve",
-    "rootDir": "src",
+    "jsxImportSource": "solid-js",
     "outDir": "dist"
   },
-  "include": ["src/**/*", "src/**/*.json"],
-  "exclude": ["node_modules", "test", "dist", "tmp", "examples"]
+  "include": ["./src", "./test"],
+  "exclude": ["./dist/test", "./dist/src"]
 }
