--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -13,17 +13,18 @@
   },
   "sideEffects": false,
   "dependencies": {
-    "@saulx/hash": "^2.0.0",
-    "@based/errors": "^1.3.0"
+    "@based/errors": "^1.3.0",
+    "@saulx/hash": "^2.0.0"
   },
   "devDependencies": {
+    "@based/client": "^6.0.1",
+    "@saulx/tsconfig": "^1.1.0",
     "@types/react": "^18.0.29",
+    "@types/react-dom": "^18.3.0",
+    "react-dom": "^18.2.0",
     "rimraf": "^3.0.2",
     "typescript": "^5.2.2",
-    "react-dom": "^18.2.0",
-    "@based/client": "^6.0.1",
-    "vite": "^5.2.8",
-    "@saulx/tsconfig": "^1.1.0"
+    "vite": "^5.2.8"
   },
   "peerDependencies": {
     "@based/client": "*",
