--- a/packages/solid/package.json
+++ b/packages/solid/package.json
@@ -7,23 +7,24 @@
   "scripts": {
     "build": "npx tsc",
     "server": "node ./test/based-server.js",
-    "browser": "npx vite ./test/browser",
+    "browser": "npx vite -c ./vite.config.ts ./test/browser",
     "watch": "npm run build -- --watch",
     "clean": "rimraf {.turbo,dist,node_modules}"
   },
   "sideEffects": false,
   "dependencies": {
-    "@saulx/hash": "^2.0.0",
-    "@based/errors": "^1.3.0"
+    "@based/errors": "^1.3.0",
+    "@saulx/hash": "^2.0.0"
   },
   "devDependencies": {
+    "@based/client": "^6.0.1",
+    "@saulx/tsconfig": "^1.1.0",
     "rimraf": "^3.0.2",
     "solid-devtools": "^0.29.2",
     "typescript": "^5.3.3",
-    "vite-plugin-solid": "^2.8.2",
-    "@based/client": "^6.0.1",
     "vite": "^5.2.8",
-    "@saulx/tsconfig": "^1.1.0"
+    "vite-plugin-solid": "^2.8.2",
+    "vite-tsconfig-paths": "^4.3.2"
   },
   "peerDependencies": {
     "@based/client": "*",
