--- a/package.json
+++ b/package.json
@@ -37,9 +37,10 @@
   },
   "devDependencies": {
     "@saulx/tsconfig": "^1.1.0",
-    "@saulx/prettier-config": "2.0.0",
+    "@saulx/prettier-config": "^2.0.0",
+    "prettier": "^3.2.5",
     "rimraf": "^3.0.2",
     "turbo": "1.6.3",
-    "typescript": "^5.1.6"
+    "typescript": "^5.4.5"
   }
 }
