--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,5 +5,6 @@
     "allowImportingTsExtensions": true,
     "moduleResolution": "Node"
   },
-  "include": ["src", "test"]
+  "include": ["src", "test"],
+  "exclude": ["*.md"]
 }
