* Including esbuild file configuration * Fixing some imports * Changing the root id element to the solid test application from "root" to "app" * Bumping the version of the saulx/tsconfig * Fixing some things on the tsconfig from react and solid

--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -2,9 +2,10 @@
   "extends": "@saulx/tsconfig/default.json",
   "compilerOptions": {
     "jsx": "react",
-    "rootDir": "src",
+    "module": "ESNext",
+    "moduleResolution": "Node",
     "outDir": "dist"
   },
-  "include": ["./src", "./test"],
-  "exclude": ["./dist/test", "./dist/src"]
+  "include": ["./src", "./test/browser"],
+  "exclude": ["./dist"]
 }
