Add .gitignore and move all libs

--- a/packages/db/clibs/Makefile
+++ b/packages/db/clibs/Makefile
@@ -16,6 +16,9 @@ LIBS := \
 		lib/util \
 		lib/selva
 
+LIB_PATH := ../../../zig-out/lib
+export LIB_PATH
+
 # Build all libraries (ordered)
 all: | $(LIBS)
 
@@ -27,8 +30,8 @@ clean:
 	find . -type f -name "*.o" -exec rm -f {} \;
 	find . -type f -name "*.so" -exec rm -f {} \;
 	find . -type f -name "*.so.*" -exec rm -f {} \;
-	find . \( -type l -o -type l \) -name "*.so" -exec rm -f {} \;
-	find . \( -type l -o -type l \) -name "*.dylib" -exec rm -f {} \;
+	find ./lib \( -type l -o -type l \) -name "*.so" -exec rm -f {} \;
+	find ./lib \( -type l -o -type l \) -name "*.dylib" -exec rm -f {} \;
 	find ./lib -type d -maxdepth 1 -exec $(MAKE) -C {} clean \;
 
 .PHONY: all clean lib $(LIBS)
