--- a/packages/db/clibs/lib/jemalloc/Makefile
+++ b/packages/db/clibs/lib/jemalloc/Makefile
@@ -36,7 +36,7 @@ endif
 
 all: .make-prerequisites jemalloc-$(JEMALLOC_VER)/config.status
 	cd jemalloc-$(JEMALLOC_VER) && $(MAKE) CFLAGS="$(JEMALLOC_CFLAGS)" LDFLAGS="$(JEMALLOC_LDFLAGS)" LIBDIR="$(JEMALLOC_LIBDIR)" build_lib_shared
-	cp -P jemalloc-$(JEMALLOC_VER)/lib/* "../"
+	cp -P jemalloc-$(JEMALLOC_VER)/lib/* "$(LIB_PATH)"
 	rsync --checksum "jemalloc-$(JEMALLOC_VER)/include/jemalloc/jemalloc_selva.h" "../../include/jemalloc_$(SELVA_ARCH).h"
 
 jemalloc-$(JEMALLOC_VER)/config.status:
