--- a/packages/uws/package.json
+++ b/packages/uws/package.json
@@ -1,7 +1,12 @@
 {
   "name": "@based/uws",
-  "version": "4.1.0",
+  "version": "5.0.0",
   "license": "Apache-2.0",
   "main": "uws.js",
-  "types": "./index.d.ts"
+  "types": "./index.d.ts",
+  "exports": {
+    "import": "./ESM_wrapper.mjs",
+    "require": "./uws.js",
+    "types": "./index.d.ts"
+  }
 }
