Add selva cleant script

--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -10,8 +10,9 @@
     "test": "npx ava",
     "clean": "rimraf {.turbo,dist,node_modules}",
     "build-zig": "mkdir -p dist && zig build --summary all",
+    "build-selva": "mkdir -p build && make -C clibs",
+    "clean-selva": "rm -rf build && make -C clibs clean",
     "get-napi": "./scripts/download-node-headers.sh",
-    "build-selva": "mkdir -p build && cd clibs && make",
     "test-simple": "zig build && npm run build && npm run test -- ./dist/test/index.js"
   },
   "sideEffects": false,
