--- a/packages/db/clibs/lib/selva/Makefile
+++ b/packages/db/clibs/lib/selva/Makefile
@@ -4,7 +4,7 @@ include ../../common.mk
 
 CFLAGS += -fPIC -fvisibility=hidden -iquote ../../include -I ../../../deps/node-v20.11.1/include/node -include ../../include/cdefs.h
 LDFLAGS += -shared -g \
-		   -L../../../zig-out/lib \
+		   -L../../../build \
 		   -ljemalloc_selva -ldeflate -lutil
 LIB_SUFFIX := .node
 
