--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,32 +1,29 @@
 {
   "name": "@based/react",
-  "version": "6.0.0",
+  "version": "5.0.2",
   "license": "MIT",
   "type": "module",
-  "main": "dist/src/index.js",
+  "main": "dist/index.js",
   "scripts": {
     "build": "npx tsc",
     "server": "node ./test/based-server.js",
-    "browser": "npx vite -c ./vite.config.ts ./test/browser",
+    "browser": "npx vite ./test/browser",
     "watch": "npm run build -- --watch",
-    "esbuild": "node esbuild.config.cjs",
     "clean": "rimraf {.turbo,dist,node_modules}"
   },
   "sideEffects": false,
   "dependencies": {
-    "@based/errors": "^1.3.0",
-    "@saulx/hash": "^2.0.0"
+    "@saulx/hash": "^2.0.0",
+    "@based/errors": "^1.3.0"
   },
   "devDependencies": {
-    "@based/client": "^6.0.1",
-    "@saulx/tsconfig": "^1.1.0",
     "@types/react": "^18.0.29",
-    "@types/react-dom": "^18.3.0",
-    "esbuild": "^0.21.4",
-    "react-dom": "^18.2.0",
     "rimraf": "^3.0.2",
     "typescript": "^5.2.2",
-    "vite": "^5.2.8"
+    "react-dom": "^18.2.0",
+    "@based/client": "^6.0.1",
+    "vite": "^5.2.8",
+    "@saulx/tsconfig": "^1.1.0"
   },
   "peerDependencies": {
     "@based/client": "*",
