--- a/packages/solid/package.json
+++ b/packages/solid/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@based/solidjs",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "license": "MIT",
   "type": "module",
   "main": "dist/src/index.js",
@@ -17,6 +17,9 @@
     "@based/errors": "^1.3.0",
     "@saulx/hash": "^2.0.0"
   },
+  "files": [
+    "dist"
+  ],
   "devDependencies": {
     "@based/client": "^6.0.1",
     "@saulx/tsconfig": "^1.1.0",
