--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -17,6 +17,9 @@
     "@based/errors": "^1.3.0",
     "@saulx/hash": "^2.0.0"
   },
+  "files": [
+    "dist"
+  ],
   "devDependencies": {
     "@based/client": "^6.0.1",
     "@saulx/tsconfig": "^1.1.0",
