--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -34,6 +34,7 @@
     "data-record": "^2.0.0",
     "@saulx/hash": "^3.0.0",
     "@based/schema": "^3.1.0",
+    "snappy": "^7.2.2",
     "@saulx/utils": "^4.3.2",
     "@based/server": "^8.0.0",
     "@based/client": "^6.0.0"
