fixing the whole bundling, fixing the indentation on README.md, fixing the client signal on useBasedAuth.ts

--- a/packages/solid/tsconfig.json
+++ b/packages/solid/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "jsx": "preserve",
     "jsxImportSource": "solid-js",
+    "lib": ["DOM", "DOM.Iterable", "ESNext"],
     "module": "ESNext",
     "moduleResolution": "Node",
     "isolatedModules": true,
