--- a/packages/solid/package.json
+++ b/packages/solid/package.json
@@ -1,39 +1,81 @@
 {
   "name": "@based/solidjs",
-  "version": "0.1.0",
+  "version": "0.1.3",
   "license": "MIT",
-  "type": "module",
-  "main": "dist/src/index.js",
-  "scripts": {
-    "build": "npx tsc",
-    "server": "node ./test/based-server.js",
-    "browser": "npx vite -c ./vite.config.ts ./test/browser",
-    "watch": "npm run build -- --watch",
-    "esbuild": "node esbuild.config.cjs",
-    "clean": "rimraf {.turbo,dist,node_modules}"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/atelier-saulx/based.git"
   },
+  "homepage": "https://github.com/atelier-saulx/based/tree/main/packages/solid",
+  "bugs": {
+    "url": "https://github.com/atelier-saulx/based/issues"
+  },
+  "private": false,
   "sideEffects": false,
+  "type": "module",
+  "main": "./dist/index.js",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    "import": {
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
+    }
+  },
+  "scripts": {
+    "dev": "vite -c ./vite.config.ts ./test/browser",
+    "watch": "npm run build -- --watch",
+    "build": "tsup",
+    "esbuild": "node esbuild.config.cjs",
+    "server": "node ./test/based-server.js",
+    "clean": "rimraf {.turbo,dist,node_modules}",
+    "test": "concurrently pnpm:test:*",
+    "test:client": "vitest",
+    "format": "prettier --ignore-path .gitignore -w \"src/**/*.{js,ts,json,css,tsx,jsx}\" \"dev/**/*.{js,ts,json,css,tsx,jsx}\"",
+    "lint": "concurrently npm:lint:*",
+    "lint:code": "eslint --ignore-path .gitignore --max-warnings 0 src/**/*.{js,ts,tsx,jsx}",
+    "lint:types": "tsc --noEmit",
+    "update-deps": "pnpm up -Li",
+    "release:patch": "npm version patch",
+    "release:minor": "npm version minor",
+    "release:major": "npm version major"
+  },
   "dependencies": {
     "@based/errors": "^1.3.0",
-    "@saulx/hash": "^2.0.0"
+    "@saulx/hash": "^3.0.0"
   },
   "files": [
-    "dist/src"
+    "dist"
   ],
   "devDependencies": {
     "@based/client": "^6.0.1",
     "@saulx/tsconfig": "^1.1.0",
-    "esbuild": "^0.21.4",
+    "@types/node": "^20.12.12",
+    "@typescript-eslint/eslint-plugin": "^7.9.0",
+    "@typescript-eslint/parser": "^7.9.0",
+    "concurrently": "^8.2.2",
+    "esbuild": "^0.21.3",
     "esbuild-plugin-solid": "^0.6.0",
+    "eslint": "^8.56.0",
+    "eslint-plugin-eslint-comments": "^3.2.0",
+    "eslint-plugin-no-only-tests": "^3.1.0",
+    "jsdom": "^24.0.0",
+    "prettier": "3.0.0",
+    "solid-js": "^1.8.17",
+    "tsup": "^8.0.2",
+    "tsup-preset-solid": "^2.2.0",
+    "typescript": "^5.4.5",
+    "vite": "^5.2.11",
+    "vite-plugin-solid": "^2.10.2",
+    "vitest": "^1.6.0",
     "rimraf": "^3.0.2",
     "solid-devtools": "^0.29.3",
-    "typescript": "^5.3.3",
-    "vite": "^5.2.8",
-    "vite-plugin-solid": "^2.8.2",
     "vite-tsconfig-paths": "^4.3.2"
   },
   "peerDependencies": {
     "@based/client": "*",
     "solid-js": "^1.8.11"
-  }
+  },
+  "browser": {},
+  "typesVersions": {}
 }
