--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -18,7 +18,7 @@
     "@saulx/hash": "^2.0.0"
   },
   "files": [
-    "dist"
+    "dist/src"
   ],
   "devDependencies": {
     "@based/client": "^6.0.1",
