--- a/packages/solid/tsconfig.json
+++ b/packages/solid/tsconfig.json
@@ -11,5 +11,5 @@
     "baseUrl": "."
   },
   "include": ["./src", "./test/browser"],
-  "exclude": ["./dist"]
+  "exclude": ["./dist", "**/*.md"]
 }
