--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -14,12 +14,12 @@
     "clean-selva": "rm -rf build && make -C clibs clean",
     "get-napi": "./scripts/download-node-headers.sh",
     "test-real": "npm run build && npm run test -- ./dist/test/real.js",
-    "test-simple": "zig build && npm run build && npm run test -- ./dist/test/index.js"
+    "test-simple": "zig build && npm run build && node ./dist/test/index.js"
   },
   "sideEffects": false,
   "ava": {
     "timeout": "2m",
-    "workerThreads": false,
+    "workerThreads": true,
     "files": [
       "./dist/test/**/*.js"
     ]
@@ -35,6 +35,7 @@
     "@saulx/hash": "^3.0.0",
     "@based/schema": "^3.1.0",
     "snappy": "^7.2.2",
+    "picocolors": "^1.0.1",
     "@saulx/utils": "^4.3.2",
     "@based/server": "^8.0.0",
     "@based/client": "^6.0.0"
