--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -14,7 +14,8 @@
     "clean-selva": "rm -rf build && make -C clibs clean",
     "get-napi": "./scripts/download-node-headers.sh",
     "test-real": "npm run build && npm run test -- ./dist/test/real.js",
-    "test-simple": "zig build && npm run build && node ./dist/test/index.js"
+    "test-single-ref": "zig build && npm run build && npm test -- ./dist/test/singleRef.js",
+    "playground": "zig build && npm run build && node ./dist/test/index.js"
   },
   "sideEffects": false,
   "ava": {
