--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -15,7 +15,7 @@
     "get-napi": "./scripts/download-node-headers.sh",
     "test-real": "npm run build && npm run test -- ./dist/test/real.js",
     "test-single-ref": "zig build && npm run build && npm test -- ./dist/test/singleRef.js",
-    "playground": "zig build && npm run build && node ./dist/test/index.js"
+    "playground": "zig build && npm run build && node ./dist/test/playground.js"
   },
   "sideEffects": false,
   "ava": {
