--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -1,9 +1,10 @@
 {
   "name": "@based/client",
-  "version": "6.8.0",
+  "version": "6.9.0",
   "license": "MIT",
   "scripts": {
-    "build": "npx tsc && cp ./dist/src/index.d.ts ./dist/src/index_original.d.ts",
+    "buildCjs": "npx esbuild index.cjs --bundle --platform=node --minify --outfile=./dist/index.cjs",
+    "build": "npx tsc && cp ./dist/src/index.d.ts ./dist/src/index_original.d.ts && npm run buildCjs",
     "watch": "npx tsc --watch",
     "clean": "rimraf {.turbo,dist,node_modules}",
     "test": "npx ava",
@@ -18,7 +19,12 @@
   },
   "exports": {
     "./ssr": "./dist/src/ssr.js",
-    ".": "./dist/src/index.js"
+    ".": {
+      "node": {
+        "require": "./dist/index.cjs"
+      },
+      "default": "./dist/src/index.js"
+    }
   },
   "ava": {
     "timeout": "10m",
@@ -29,27 +35,29 @@
   },
   "files": [
     "dist/src",
+    "dist/index.cjs",
     "README.md",
     "package.json"
   ],
   "dependencies": {
+    "@based/errors": "^1.3.0",
+    "@based/fetch": "^2.0.3",
+    "@based/opts": "^1.0.0",
     "@saulx/diff": "^2.0.2",
     "@saulx/hash": "^3.0.0",
     "@saulx/utils": "^5.0.0",
-    "@based/fetch": "^2.0.3",
-    "@based/errors": "^1.3.0",
-    "@based/opts": "^1.0.0",
     "fflate": "0.8.1",
     "isomorphic-ws": "^5.0.0",
     "ws": "^8.13.0"
   },
   "devDependencies": {
-    "vite": "^5.2.8",
-    "get-port": "7.0.0",
     "@based/functions": "^3.0.2",
-    "cross-fetch": "4.0.0",
     "ava": "5.3.1",
+    "cross-fetch": "4.0.0",
+    "esbuild": "^0.23.0",
+    "get-port": "7.0.0",
+    "rimraf": "^3.0.2",
     "typescript": "^5.2.2",
-    "rimraf": "^3.0.2"
+    "vite": "^5.2.8"
   }
 }
