--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -19,6 +19,7 @@
     "test-single-ref-query": "zig build && npm run build && npm test -- ./dist/test/singleRefQuery.js",
     "test-string": "zig build && npm run build && npm test -- ./dist/test/string.js",
     "test-update": "zig build && npm run build && npm test -- ./dist/test/update.js",
+    "test-sort": "zig build && npm run build && npm test -- ./dist/test/sort.js",
     "playground": "zig build && npm run build && node ./dist/test/playground.js"
   },
   "sideEffects": false,
