--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -21,7 +21,7 @@
     "test-update": "zig build && npm run build && npm test -- ./dist/test/update.js",
     "test-sort": "zig build && npm run build && npm test -- ./dist/test/sort.js",
     "test-range": "zig build && npm run build && npm test -- ./dist/test/range.js",
-    "playground": "zig build && npm run build && node ./dist/test/playground.js"
+    "playground": "zig build && npm run build && node ./dist/test/shared/playground.js"
   },
   "sideEffects": false,
   "ava": {
