--- a/packages/db/clibs/lib/selva/Makefile
+++ b/packages/db/clibs/lib/selva/Makefile
@@ -2,11 +2,21 @@
 # SPDX-License-Identifier: MIT
 include ../../common.mk
 
-CFLAGS += -fPIC -fvisibility=hidden -iquote ../../include -I ../../../deps/node-v20.11.1/include/node -include ../../include/cdefs.h \
-		  -Wno-gnu-alignof-expression
+CFLAGS += -fPIC -fvisibility=hidden \
+		  -iquote ../../include -I ../../../deps/node-v20.11.1/include/node -include ../../include/cdefs.h
 LDFLAGS += -shared -g \
 		   -L../../../build \
 		   -ljemalloc_selva -ldeflate -lutil -lxxhash
+
+ifeq ($(uname_S),Linux)
+	LDFLAGS += -ldl -fPIC -rdynamic -Wl,-rpath,'$$ORIGIN'
+endif
+ifeq ($(uname_S),Darwin)
+	CFLAGS += -Wno-gnu-alignof-expression
+	LDFLAGS += -undefined dynamic_lookup \
+			   -Wl,-install_name,@rpath/libselva$(LIB_SUFFIX) \
+			   -Wl,-rpath,@loader_path
+endif
 
 OBJ := \
 	db.o \
@@ -25,15 +35,6 @@ OBJ := \
 ifeq ($(NAPI),1)
 	OBJ += node_selva.o
 	LIB_SUFFIX := .node
-endif
-
-ifeq ($(uname_S),Linux)
-	LDFLAGS += -ldl -fPIC -rdynamic -Wl,-rpath,'$$ORIGIN'
-endif
-ifeq ($(uname_S),Darwin)
-	LDFLAGS += -undefined dynamic_lookup \
-			   -Wl,-install_name,@rpath/libselva$(LIB_SUFFIX) \
-			   -Wl,-rpath,@loader_path
 endif
 
 TARGET := $(LIB_PATH)/libselva$(LIB_SUFFIX)
