--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -16,7 +16,7 @@
     "test-query": "zig build && npm run build && npm run test -- ./dist/test/query.js",
     "test-real": "npm run build && npm run test -- ./dist/test/real.js",
     "test-single-ref": "zig build && npm run build && npm test -- ./dist/test/singleRef.js",
-    "test-remove": "zig build && npm run build && npm test -- ./dist/test/remove.js",
+    "test-remove": "npm run build-selva  && zig build && npm run build && npm test -- ./dist/test/remove.js",
     "test-single-ref-query": "zig build && npm run build && npm test -- ./dist/test/singleRefQuery.js",
     "test-string": "npm run build-selva && zig build && npm run build && npm test -- ./dist/test/string.js",
     "test-update": "zig build && npm run build && npm test -- ./dist/test/update.js",
