--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -5,23 +5,13 @@
   "type": "module",
   "main": "./dist/src/index.js",
   "scripts": {
-    "build": "tsc",
-    "watch": "npx tsc --watch",
-    "clean": "rimraf {.turbo,dist,node_modules}",
-    "build-zig": "mkdir -p dist && zig build --summary all",
-    "build-selva": "mkdir -p build && make -C clibs",
-    "clean-selva": "rm -rf build && make -C clibs clean",
     "get-napi": "./scripts/download-node-headers.sh",
-    "test-query": "zig build && npm run build && npm run test -- ./dist/test/query.js",
-    "test-real": "npm run build && npm run test -- ./dist/test/real.js",
-    "test-single-ref": "zig build && npm run build && npm test -- ./dist/test/singleRef.js",
-    "test-remove": "npm run build-selva  && zig build && npm run build && npm test -- ./dist/test/remove.js",
-    "test-single-ref-query": "zig build && npm run build && npm test -- ./dist/test/singleRefQuery.js",
-    "test-string": "npm run build-selva && zig build && npm run build && lldb -o run -o \"script import os; os._exit(0)\" node -- ./dist/test/string.js",
-    "test-update": "zig build && npm run build && npm test -- ./dist/test/update.js",
-    "test-sort": "zig build && npm run build && node ./dist/test/sort.js",
-    "test-range": "zig build && npm run build && npm test -- ./dist/test/range.js",
-    "playground": "zig build && npm run build && node ./dist/test/shared/playground.js"
+    "build": "npm run build-selva && npm run build-zig && tsc",
+    "watch": "npx tsc --watch",
+    "clean-selva": "rm -rf build && make -C clibs clean",
+    "clean": "rimraf {.turbo,dist,node_modules,.zig-cache,.zig-out,tmp} && npm run clean-selva",
+    "playground": "npm run build && node ./dist/test/shared/playground.js",
+    "test": " lldb -o run -o \"script import os; os._exit(0)\" node ./scripts/test.js"
   },
   "sideEffects": false,
   "files": [
@@ -44,7 +34,6 @@
     "@types/node": "^22.5.3",
     "lorem-ipsum": "^2.0.8",
     "ts-node": "10.9.1",
-    "ava": "5.3.1",
     "typescript": "^4.3.5",
     "rimraf": "^3.0.2"
   }
