--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -6,12 +6,13 @@
   "main": "./dist/src/index.js",
   "scripts": {
     "get-napi": "./scripts/download-node-headers.sh",
-    "build": "npm run build-selva && npm run build-zig && tsc",
+    "build-selva": "mkdir -p build && make -C clibs",
+    "build": "npm run build-selva && zig build  && tsc",
     "watch": "npx tsc --watch",
     "clean-selva": "rm -rf build && make -C clibs clean",
     "clean": "rimraf {.turbo,dist,node_modules,.zig-cache,.zig-out,tmp} && npm run clean-selva",
     "playground": "npm run build && node ./dist/test/shared/playground.js",
-    "test": " lldb -o run -o \"script import os; os._exit(0)\" node ./scripts/test.js"
+    "test": "npm run build && lldb -o run -o \"script import os; os._exit(0)\" node ./scripts/test.js"
   },
   "sideEffects": false,
   "files": [
